--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,4 +67,14 @@
         app:layout_constraintStart_toStartOf="@+id/btnShowNowtificationAction"
         app:layout_constraintTop_toBottomOf="@+id/btnShowNowtificationAction" />
 
+    <Button
+        android:id="@+id/btnNotificationProgress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/show_notification_progress"
+        app:layout_constraintEnd_toEndOf="@+id/btnShowReplyButton"
+        app:layout_constraintStart_toStartOf="@+id/btnShowReplyButton"
+        app:layout_constraintTop_toBottomOf="@+id/btnShowReplyButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
