--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<!--
+  ~ Copyright (C) 2019 Google Inc.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <Button
-        android:id="@+id/btnNotification"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/show_notification"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/notifications"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnShowToast"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/show_toast"
-        app:layout_constraintEnd_toEndOf="@+id/btnNotificationTap"
-        app:layout_constraintStart_toStartOf="@+id/btnNotificationTap"
-        app:layout_constraintTop_toBottomOf="@+id/btnNotificationTap" />
-
-    <Button
-        android:id="@+id/btnNotificationTap"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/show_notification_tap"
-        app:layout_constraintEnd_toEndOf="@+id/btnNotification"
-        app:layout_constraintStart_toStartOf="@+id/btnNotification"
-        app:layout_constraintTop_toBottomOf="@+id/btnNotification" />
-
-    <Button
-        android:id="@+id/btnShowNowtificationAction"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/show_notification_action"
-        app:layout_constraintEnd_toEndOf="@+id/btnShowToast"
-        app:layout_constraintStart_toStartOf="@+id/btnShowToast"
-        app:layout_constraintTop_toBottomOf="@+id/btnShowToast" />
-
-    <Button
-        android:id="@+id/btnShowReplyButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/show_reply_button"
-        app:layout_constraintEnd_toEndOf="@+id/btnShowNowtificationAction"
-        app:layout_constraintStart_toStartOf="@+id/btnShowNowtificationAction"
-        app:layout_constraintTop_toBottomOf="@+id/btnShowNowtificationAction" />
-
-    <Button
-        android:id="@+id/btnNotificationProgress"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/show_notification_progress"
-        app:layout_constraintEnd_toEndOf="@+id/btnShowReplyButton"
-        app:layout_constraintStart_toStartOf="@+id/btnShowReplyButton"
-        app:layout_constraintTop_toBottomOf="@+id/btnShowReplyButton" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".MainActivity"/>
